# missestruss

./: .gitignore  CMakeLists.txt  Mises.rc  Mises1.pro  PKGBUILD.in  defines.h  main.cpp  mises1.qrc  qmisestruss.desktop  use_cpack.cmake  version.cmake
cmake/modules/: FindLibQwt.cmake  FindLibQwt4.cmake  FindLibQwt5.cmake
core/: misescalcelast.cpp  misescalcelast.h  misescalcnelast.cpp  misescalcnelast.h
gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
icons/: .directory
langs/: misestruss_ru.qm  misestruss_uk.qm  misestruss_uk.ts  qmisestruss_ru.ts
